--- a/test/fixtures/report_mentions.yml
+++ b/test/fixtures/report_mentions.yml
@@ -4,7 +4,7 @@
 # model remove the "{}" from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one:
-  mention_to: two
-  mentioned_by: one
+#one:
+#  mention_to: two
+#  mentioned_by: one
 # column: value
